--- a/winamp2-js/winamp.css
+++ b/winamp2-js/winamp.css
@@ -7,10 +7,6 @@ input[type=range]:focus { outline: none; }
 input[type=range]::-moz-focus-outer { border: 0; }
 a:focus { outline: none; }
 
-body {
-    background-color: #0072CC;
-}
-
 #shade-time {
     cursor:url('cursors/MAINMENU.PNG'), auto;
 }
@@ -28,6 +24,12 @@ body {
 }
 
 /* Styles */
+
+#container {
+    height: 116px;
+    width: 275px;
+}
+
 #winamp {
     position: absolute;
     /* background-image: MAIN.BMP via Javascript */
@@ -35,7 +37,7 @@ body {
     width: 275px;
     margin-top: -58px;
     margin-left: -137px;
-    top: 40%;
+    top: 50%;
     left: 50%;
     cursor:url('cursors/MAINMENU.PNG'), auto;
 }
